2012-04-30 Leland Morrison <enigmalee AT sourceforge.net>
	* sim/ucsim/app.cc:  reduced the frequency of checks for user input
	
2012-04-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve code generation for comparison to zero.

2012-04-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/librarian/sdcclib.c:
	  Do not depend on PATH_MAX, fix #3521650.
	* sdas/asxxsrc/asxxxx.h:
	  Use FILENAME_MAX if PATH_MAX is not defined.

2012-04-25 Borut Razem <borut.razem AT gmail.com>

	* src/common.h, src/ds390/main.c: include SDCCsystem.h in common.h
	* src/SDCCmain.c: added newline at end of file
	* src/SDCCicode.c: use TRUE instead of undefined true
	* src/SDCCicode.h: fixed declaration of isOperandLiteral()

2012-04-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-gbz80.def:
	  Removed peephole that resulted in invalid or operand on gbz80.

2012-04-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix #3521024.

2012-04-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c,
	  src/SDCCopt.c,
	  src/z80/gen.c:
	  GET_VALUE_AT_ADDRESS with offset for z80, z180 and r2k.

2012-04-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c:
	  Enable replacing division by power of two by conditional addition and shift (for hc08, z80, z180, gbz80 and r2k).
	* src/z80/gen.c,
	  src/mcs51/gen.c:
	  Fortify a "/* I assume that […]" comment by an assertion that would have saved me some time.

2012-04-22 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libsdcc/gptr/eeprom{8,16}_gptrput[1234].c:
	  fix accessing EECON1.WREN

2012-04-22 Raphael Neider <rneider AT web.de>

	* device/non-free/lib/pic14/libdev/Makefile.in:
	  build 16f72[01] only if --enable-new-pics is given, as the
	  devices are not supported in the current gputils release 0.14.1

2012-04-21 Maarten Brock <sourceforge.brock AT dse.nl>
